css/styles.css
body {
  background-color: #000;
  color: #fff;
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

#matrixCanvas {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  background: black;
}

.container {
  position: relative;
  z-index: 1;
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
  text-align: center;
    background-color: #000;
}

h1,
h2 {
  color: #fff;
  margin-bottom: 10px;
}

.section {
  margin-bottom: 15px;
  text-align: left;
}

.job-title {
  font-weight: bold;
}

.date {
  float: right;
  color: #ccc;
}

ul {
  padding-left: 20px;
  text-align: left;
}

ul li {
  margin-bottom: 5px;
}

.profile-pic {
  display: block;
  margin: 0 auto 15px auto;
  width: 200px;
  height: 200px;
  object-fit: cover;
  border-radius: 50%;
  border: 2px solid #fff;
}

.contact-info {
  font-size: 0.9em;
  color: #ccc;
  margin-bottom: 20px;
}

@media (max-width: 600px) {
  .container {
    padding: 10px;
  }

  .date {
    float: none;
    display: block;
    text-align: left;
    margin-top: 5px;
  }
}

a {
  color: red;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

